--- a/pyVerein/members/templates/members/member_list.html
+++ b/pyVerein/members/templates/members/member_list.html
@@ -26,7 +26,7 @@
             </tr>
         </thead>
     </table>
-    <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute" aria-label="">
+    <a href ="{% url 'members:create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
         <i class="mdc-fab__icon fa fa-plus"></i>
     </a>
 {% endblock %}
