--- a/material.io/sass/material.scss
+++ b/material.io/sass/material.scss
@@ -49,8 +49,14 @@ a.mdc-fab{
     text-decoration: none;
 }
 
-.mdc-fab--absolute {
+.mdc-fab--absolute-bottom-right {
     position: fixed;
     bottom: 70px;
     right: 70px;
+}
+
+.mdc-fab--absolute-bottom-left {
+    position: fixed;
+    bottom: 70px;
+    left: 70px;
 }
