--- a/pyVerein/app/static/app/css/app.css
+++ b/pyVerein/app/static/app/css/app.css
@@ -67,18 +67,29 @@ div.dataTables_wrapper .mdl-data-table th {
 div.dataTables_wrapper .mdl-data-table td:hover {
   cursor: pointer; }
 
-.form-edit {
+.heading.mdc-typography--overline {
+  font-size: 16px; }
+
+.heading.mdc-typography--overline:not(:first-of-type) {
+  margin-top: 30px; }
+
+.main-narrow {
   padding-left: 24%;
   padding-right: 24%; }
-  .form-edit .mdc-typography--overline {
-    font-size: 16px; }
-  .form-edit .mdc-typography--overline:not(:first-of-type) {
-    margin-top: 30px; }
-  .form-edit .mdc-input {
+  .main-narrow .mdc-input {
     width: 49%;
     min-width: 200px; }
-  .form-edit .form-submit {
+  .main-narrow .form-submit {
     margin-top: 30px; }
+  .main-narrow .detail-content {
+    padding: 20px; }
+    .main-narrow .detail-content .row {
+      display: flex;
+      margin-top: 5px; }
+      .main-narrow .detail-content .row .field-title {
+        width: 30%; }
+      .main-narrow .detail-content .row .field-value {
+        width: 70%; }
 
 footer#page-footer {
   height: 65px;
