--- a/pyVerein/members/templates/members/member_list.html
+++ b/pyVerein/members/templates/members/member_list.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="{% static 'app/vendors/datatables.net/datatables.material.min.css' %}">
 {% endblock %}
 
+{% block page_title %}
+    {% trans 'Member-List' %}
+{% endblock %}
+
 {% block title %}
     {% trans 'Member-List' %}
 {% endblock %}
