--- a/material.io/sass/app.scss
+++ b/material.io/sass/app.scss
@@ -64,11 +64,11 @@ section.main{
         height: 50px;
     }
 }
-
-div.dataTables_wrapper {
+div.dataTables_wrapper{
     div.dataTables_length{
         .mdc-select{
-            width: 100px;
+        width: 150px;
+        margin-top: 15px;
         }
     }
     div.dataTables_filter {
@@ -77,7 +77,6 @@ div.dataTables_wrapper {
         }
         
         .mdc-text-field{
-            margin-top: 0px;
             width: 220px;
         }
     }
@@ -89,7 +88,11 @@ div.dataTables_wrapper {
     .mdl-data-table td:hover{
        cursor: pointer;
     }
+    .mdl-data-table--non-linkable td:hover{
+        cursor: initial;
+    }
 }
+
 
 .heading.mdc-typography--overline{
     font-size: 16px;
@@ -106,6 +109,12 @@ div.dataTables_wrapper {
     .mdc-input{
         width: 49%;
         min-width: 200px;
+    }
+
+    .full-width{
+        .mdc-input{
+            width: 100%;
+        }
     }
 
     .form-submit{
