--- a/pyVerein/finance/templates/finance/costcenter/edit.html
+++ b/pyVerein/finance/templates/finance/costcenter/edit.html
@@ -12,56 +12,30 @@
     {% trans 'Edit cost center' %} 
 {% endblock %} 
 {% block content %}
-<div class="row">
-    <div class="col-md-12">
-        <div class="x_panel">
-            <div class="x_title">
-                <h1>{{ costcenter.number }} {{ costcenter.name }}</h1>
+<div class="main-narrow">
+    <div class="detail-content  mdc-elevation--z4">
+        <form action="{% url 'finance:costcenter_edit' costcenter.pk %}" method="POST" id="form">
+            {% csrf_token %}
+            <div class="heading mdc-typography--overline">
+                {{ costcenter.number }} {{ costcenter.name }}
             </div>
-            <div class="x_content data">
-                <form action="{% url 'finance:costcenter_edit' costcenter.pk %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
-                    {% csrf_token %}
-                    <div class="page-header">
-                        {% trans 'Cost center' %}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Cost center name' %}</div>
-                        <div class="col-md-5 value">{% render_field form.name class+="form-control" data-next="id_description" autofocus="autofocus" %}
-                            <span class="help-block with-errors"></span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Cost center description' %}</div>
-                        <div class="col-md-5 value">{% render_field form.description class+="form-control" %}<span class="help-block with-errors"></span></div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-2 col-md-offset-3">
-                            <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
-                        </div>
-                        <div class="col-md-2 col-md-offset-1">
-                            <a href="{% url 'finance:costcenter_detail' pk=costcenter.pk %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
-                        </div>
-                    </div>
-                    
-                </form>
+            <div class="form-group full-width">
+                {% trans 'Cost center name' as name_label%}
+                {% include "utils/_textfield.html" with field=form.name label=name_label next='id_description' %}
             </div>
-        </div>
+            <div class="form-group full-width">
+                {% trans 'Cost center description' as description_label%}
+                {% include "utils/_textarea.html" with field=form.description label=description_label %}
+            </div>
+            <div class="form-group form-submit">
+                <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
+                <a href="{% url 'finance:costcenter_detail' pk=costcenter.pk %}" class="mdc-button">{% trans 'Cancel' %}</a>
+            </div>
+        </form>
     </div>
 </div>
 {% endblock %} 
 {% block foot %}
-    <!-- Validator -->
-    <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
-    <!-- icheck -->
-    <script src="{% static 'app/vendors/iCheck/icheck.js' %}"></script>
-
-    <script type="application/javascript">
-        $('input').iCheck({
-            checkboxClass: 'icheckbox_square',
-            increaseArea: '20%',
-            radioClass: 'iradio_square-blue',
-        });
-    </script> 
     <!-- Keys -->
     <script src="{% static 'app/js/keys.js' %}"></script>
     <script>
