--- a/pyVerein/finance/templates/finance/costcenter/list.html
+++ b/pyVerein/finance/templates/finance/costcenter/list.html
@@ -41,6 +41,9 @@
             </div>
         </div>
     </div>
+    <a href ="{% url 'finance:costcenter_create' %}" class="mdc-fab mdc-fab--absolute-bottom-right" aria-label="">
+        <i class="mdc-fab__icon fa fa-plus"></i>
+    </a>
 {% endblock %}
 
 {% block foot %}
