--- a/pyVerein/finance/templates/finance/costobject/create.html
+++ b/pyVerein/finance/templates/finance/costobject/create.html
@@ -8,50 +8,39 @@
 {% endblock %}
 
 {% block title %}
-    {% trans 'Create cost object' %}
+    {% trans 'Create costobject' %}
 {% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="x_panel">
-                <div class="x_content data">
-                    <form action="{% url 'finance:costobject_create' %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
-                        {% csrf_token %}
-                        <div class="page-header">
-                            {% trans 'Cost object' %}
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 field-title">{% trans 'Cost object number' %}</div>
-                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" data-next="id_name" autofocus="autofocus" %}<span class="help-block with-errors"></span></div>
-                        
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 field-title">{% trans 'Cost object name' %}</div>
-                            <div class="col-md-5 value">{% render_field form.name class+="form-control" data-next="id_description" %}<span class="help-block with-errors"></span></div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 field-title">{% trans 'Cost object description' %}</div>
-                            <div class="col-md-5 value">{% render_field form.description class+="form-control" %}<span class="help-block with-errors"></span></div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-2 col-md-offset-3">
-                                <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
-                            </div>
-                            <div class="col-md-2 col-md-offset-1">
-                                <a href="{% url 'finance:costobject_list' %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
-                            </div>
-                        </div>
-                    </form>
+    <div class="main-narrow">
+        <div class="detail-content  mdc-elevation--z4">
+            <form action="{% url 'finance:costobject_create' %}" method="POST" id="form">
+                {% csrf_token %}
+                <div class="heading mdc-typography--overline">
+                    {% trans 'Cost object' %}
                 </div>
-            </div>
+                <div class="form-group full-width">
+                    {% trans 'Cost object number' as number_label%}
+                    {% include "utils/_textfield.html" with field=form.number label=number_label next='id_name' %}
+                </div>
+                <div class="form-group full-width">
+                    {% trans 'Cost object name' as name_label%}
+                    {% include "utils/_textfield.html" with field=form.name label=name_label next='id_description' %}
+                </div>
+                <div class="form-group full-width">
+                    {% trans 'Cost object description' as description_label%}
+                    {% include "utils/_textarea.html" with field=form.description label=description_label %}
+                </div>
+                <div class="form-group form-submit">
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:costobject_list' %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
 
 {% block foot %}
-    <!-- Validator -->
-    <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
     <!-- Keys -->
     <script src="{% static 'app/js/keys.js' %}"></script>
     <script>
