--- a/pyVerein/finance/templates/finance/costcenter/create.html
+++ b/pyVerein/finance/templates/finance/costcenter/create.html
@@ -7,6 +7,10 @@
 {% block head %}
 {% endblock %}
 
+{% block page_title %}
+    {% trans 'Create costcenter' %}
+{% endblock %}
+
 {% block title %}
     {% trans 'Create costcenter' %}
 {% endblock %}
