--- a/pyVerein/finance/templates/finance/creditor/create.html
+++ b/pyVerein/finance/templates/finance/creditor/create.html
@@ -2,9 +2,12 @@
 {% load i18n %}
 {% load widget_tweaks %}
 {% load static %}
-{% get_current_language as LANGUAGE_CODE %}
 
 {% block head %}
+{% endblock %}
+
+{% block page_title %}
+    {% trans 'Create creditor' %}
 {% endblock %}
 
 {% block title %}
@@ -12,43 +15,30 @@
 {% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-12">
-            <div class="x_panel">
-                <div class="x_content data">
-                    <form action="{% url 'finance:creditor_create' %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
-                        {% csrf_token %}
-                        <div class="page-header">
-                            {% trans 'Creditor' %}
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 field-title">{% trans 'Creditor number' %}</div>
-                            <div class="col-md-5 value ">{% render_field form.number class+="form-control" data-next="id_name" autofocus="autofocus" %}<span class="help-block with-errors"></span></div>
-                        
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 field-title">{% trans 'Creditor name' %}</div>
-                            <div class="col-md-5 value">{% render_field form.name class+="form-control" %}<span class="help-block with-errors"></span></div>
-                        </div>
-                        
-                        <div class="form-group">
-                            <div class="col-md-2 col-md-offset-3">
-                                <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
-                            </div>
-                            <div class="col-md-2 col-md-offset-1">
-                                <a href="{% url 'finance:creditor_list' %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
-                            </div>
-                        </div>
-                    </form>
+    <div class="main-narrow">
+        <div class="detail-content  mdc-elevation--z4">
+            <form action="{% url 'finance:creditor_create' %}" method="POST" id="form">
+                <div class="heading mdc-typography--overline">
+                    {% trans 'Creditor' %}
                 </div>
-            </div>
+                <div class="form-group full-width">
+                    {% trans 'Creditor number' as number_label%}
+                    {% include "utils/_textfield.html" with field=form.number label=number_label next='id_name' %}
+                </div>
+                <div class="form-group full-width">
+                        {% trans 'Creditor name' as name_label%}
+                        {% include "utils/_textfield.html" with field=form.name label=name_label %}
+                    </div>
+                <div class="form-group form-submit">
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:creditor_list' %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                </div>
+            </form>
         </div>
     </div>
 {% endblock %}
 
 {% block foot %}
-    <!-- Validator -->
-    <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
     <!-- Keys -->
     <script src="{% static 'app/js/keys.js' %}"></script>
     <script>
