--- a/pyVerein/finance/templates/finance/debitor/edit.html
+++ b/pyVerein/finance/templates/finance/debitor/edit.html
@@ -8,59 +8,41 @@
     <!-- iCheck style -->
     <link rel="stylesheet" href="{% static 'app/vendors/iCheck/skins/square/blue.css' %}"> 
 {% endblock %} 
-{% block title %} 
-    {% trans 'Edit debitor' %} 
-{% endblock %} 
-{% block content %}
-<div class="row">
-    <div class="col-md-12">
-        <div class="x_panel">
-            <div class="x_title">
-                <h1>{{ debitor.number }} {{ debitor.name }}</h1>
-            </div>
-            <div class="x_content data">
-                <form action="{% url 'finance:debitor_edit' debitor.pk %}" method="POST" class="form-horizontal" data-toggle="validator" id="form">
-                    {% csrf_token %}
-                    <div class="page-header">
-                        {% trans 'Debitor' %}
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-3 field-title">{% trans 'Debitor name' %}</div>
-                        <div class="col-md-5 value">{% render_field form.name class+="form-control" autofocus="autofocus" %}<span class="help-block with-errors"></span></div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="col-md-2 col-md-offset-3">
-                            <input type="submit" class="btn btn-success btn-block" value="{% trans 'Save' %}" />
-                        </div>
-                        <div class="col-md-2 col-md-offset-1">
-                            <a href="{% url 'finance:debitor_detail' pk=debitor.pk %}" class="btn btn-danger btn-block">{% trans 'Cancel' %}</a>
-                        </div>
+{% block page_title %} 
+    {% trans 'Edit ddebitor' %} 
+{% endblock %} 
+
+{% block title %}
+    {{ ddebitor.number }} {{ ddebitor.name }}
+{% endblock title %}
+
+{% block content %}
+    <div class="main-narrow">
+        <div class="detail-content  mdc-elevation--z4">
+            <form action="{% url 'finance:ddebitor_edit' ddebitor.pk %}" method="POST" id="form">
+                <div class="heading mdc-typography--overline">
+                    {% trans 'Creditor' %}
+                </div>
+                <div class="form-group full-width">
+                        {% trans 'Creditor name' as name_label%}
+                        {% include "utils/_textfield.html" with field=form.name label=name_label %}
                     </div>
-                </form>
-            </div>
+                <div class="form-group form-submit">
+                    <input type="submit" class="mdc-button mdc-button--raised" value="{% trans 'Save' %}" />
+                    <a href="{% url 'finance:ddebitor_detail' pk=ddebitor.pk %}" class="mdc-button">{% trans 'Cancel' %}</a>
+                </div>
+            </form>
         </div>
     </div>
-</div>
-{% endblock %} 
-{% block foot %}
-    <!-- Validator -->
-    <script src="{% static 'app/vendors/bootstrap-validator/dist/validator.min.js' %}"></script>
-    <!-- icheck -->
-    <script src="{% static 'app/vendors/iCheck/icheck.js' %}"></script>
+{% endblock %}
 
-    <script type="application/javascript">
-        $('input').iCheck({
-            checkboxClass: 'icheckbox_square',
-            increaseArea: '20%',
-            radioClass: 'iradio_square-blue',
-        });
-    </script> 
+{% block foot %}
     <!-- Keys -->
     <script src="{% static 'app/js/keys.js' %}"></script>
     <script>
         $('#form').saveOnTimes();
         $('#form').nextOnEnter();
-        $('#form').exitOnEsc("{% url 'finance:debitor_detail' pk=debitor.pk %}");
+        $('#form').exitOnEsc("{% url 'finance:ddebitor_list' %}");
     </script>
 {% endblock %}
